# zendesk-mcp

./: .gitignore  NOTICE  README.md  pyproject.toml  server.json
.github/workflows/: release.yml  test.yml
mcpb/: .mcpbignore  manifest.json  pyproject.toml
mcpb/src/: server.py
src/zendesk_mcp/: __main__.py  client.py  config.py  prompts.py  server.py  setup.py
src/zendesk_mcp/tools/: attachments.py  comments.py  create_ticket.py  custom_statuses.py  git_zen.py  gitlab_context.py  groups.py  knowledge_base.py  list_tickets.py  macros.py  organizations.py  tags.py  ticket.py  time_tracking.py  update_ticket.py  users.py  views.py  write_comments.py
tests/: conftest.py  test_client.py  test_config.py  test_prompts.py
tests/tools/: test_attachments.py  test_comments.py  test_create_ticket.py  test_custom_statuses.py  test_git_zen.py  test_gitlab_context.py  test_groups.py  test_knowledge_base.py  test_list_tickets.py  test_macros.py  test_organizations.py  test_tags.py  test_ticket.py  test_time_tracking.py  test_update_ticket.py  test_users.py  test_views.py  test_write_comments.py
