[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendesk-mcp"
version = "0.1.0"
description = "Zendesk MCP server for Claude Code and other MCP clients"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Michael Rice", email = "michael@michaelrice.org" },
]
dependencies = [
    "mcp>=1.0.0",
    "zenpy>=2.0.0",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
zendesk-mcp = "zendesk_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zendesk_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
